syntax = "proto3";

import "common.proto";
option go_package = "./clusterpb/;clusterpb";

message CreateParamGroupRequest {
  string name = 1;
  int32 dbType = 2;
  int32 hasDefault = 3;
  string version = 4;
  string spec = 5;
  int32 groupType = 6;
  string note = 7;
  repeated SubmitParamDTO params = 8;
}

message CreateParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
}

message UpdateParamGroupRequest {
  int64 paramGroupId = 1;
  string name = 2;
  string version = 3;
  string spec = 4;
  string note = 5;
  repeated SubmitParamDTO params = 6;
}

message UpdateParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
}

message DeleteParamGroupRequest {
  int64 paramGroupId = 1;
}

message DeleteParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
}

message ListParamGroupRequest {
  string name = 1;
  int32 dbType = 2;
  string version = 3;
  int32 hasDefault = 4;
  string spec = 5;
  bool hasDetail = 6;
  PageDTO page = 7;
}

message ListParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  repeated ParamGroupDTO paramGroups = 2;
  PageDTO page = 3;
}

message DetailParamGroupRequest {
  int64 paramGroupId = 1;
}

message DetailParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  ParamGroupDTO paramGroup = 2;
}

message ApplyParamGroupRequest {
  int64 paramGroupId = 1;
  string clusterId = 2;
  OperatorDTO operator = 3;
  bool needReboot = 4;
}

message ApplyParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
  string clusterId = 3;
  DisplayStatusDTO displayInfo = 4;
}

message CopyParamGroupRequest {
  int64 paramGroupId = 1;
  string name = 2;
  string note = 3;
}

message CopyParamGroupResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
}

message ListClusterParamsRequest {
  string clusterId = 1;
  PageDTO page = 2;
  OperatorDTO operator = 3;
}

message ListClusterParamsResponse {
  ResponseStatusDTO respStatus = 1;
  int64 paramGroupId = 2;
  repeated ClusterParamDTO params = 3;
  PageDTO page = 4;
}

message UpdateClusterParamsRequest {
  string clusterId = 1;
  repeated UpdateClusterParamDTO params = 2;
  OperatorDTO operator = 3;
  bool needReboot = 4;
}

message UpdateClusterParamsResponse {
  ResponseStatusDTO respStatus = 1;
  string clusterId = 2;
  DisplayStatusDTO displayInfo = 3;
}

message InspectClusterParamsRequest {
  string clusterId = 1;
  OperatorDTO operator = 2;
}

message InspectClusterParamsResponse {
  ResponseStatusDTO respStatus = 1;
  repeated InspectParamDetailDTO params = 2;
}

message InspectParamDetailDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  string instance = 4;
  ParamRealValueDTO realValue = 5;
  string inspectValue = 6;
}

message ParamGroupDTO {
  int64 paramGroupId = 1;
  string name = 2;
  int32 dbType = 3;
  int32 hasDefault = 4;
  string version = 5;
  string spec = 6;
  int32 groupType = 7;
  string note = 8;
  int64 createTime = 9;
  int64 updateTime = 10;
  repeated ParamDTO params = 11;
}

message ParamDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  int32 type = 4;
  string unit = 5;
  repeated string range = 6;
  int32 hasReboot = 7;
  int32 source = 8;
  string defaultValue = 9;
  string description = 10;
  string note = 11;
  int64 createTime = 12;
  int64 updateTime = 13;
}

message ClusterParamDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  int32 type = 4;
  string unit = 5;
  repeated string range = 6;
  int32 hasReboot = 7;
  int32 source = 8;
  string defaultValue = 9;
  string description = 10;
  string note = 11;
  int64 createTime = 12;
  int64 updateTime = 13;
  ParamRealValueDTO realValue = 14;
}

message UpdateClusterParamDTO {
  int64 paramId = 1;
  string name = 2;
  string componentType = 3;
  int32 hasReboot = 4;
  int32 source = 5;
  ParamRealValueDTO realValue = 6;
}

message ParamRealValueDTO {
  string cluster = 1;
  repeated ParamInstanceRealValueDTO instances = 2;
}

message ParamInstanceRealValueDTO {
  string instance = 1;
  string value = 2;
}

message SubmitParamDTO {
  int64 paramId = 1;
  string defaultValue = 2;
  string note = 3;
}